--- a/base/load_cesium3.html
+++ b/base/load_cesium3.html
@@ -12,6 +12,8 @@
             {
                 width:100%;
                 height:100%;
+                padding:0;
+                margin:0
             }
         </style>
 </head>
