--- a/index_list.html
+++ b/index_list.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Cesium Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -23,6 +22,6 @@
     <br />
     <a href ="datasource/geojson.html">展示geojson数据</a>
     <br />
-    <a href ="datasource/3dtities.html">展示3dtities数据</a>
+    <a href ="datasource/3dtitles.html">展示3dtities数据</a><span>&nbsp;&nbsp;需要下载3d titles，链接:https://pan.baidu.com/s/1pdctcLOR08ifZnmB69q7AQ  密码:io8z</span>
 </body>
 </html>
