修改整体效果上传

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         <ul class ="menu">
             <li class="root_menu">
                 <div class="menu_item" onclick="toggoleSildMenu(event)">
-                    <span class="fa fa-object-group icon"></span>
+                    <span class="fa fa-building icon"></span>
                     <span>基础</span>
                     <span class="fa fa-angle-down pull-right"></span>
                 </div>
