--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
        {
            width:100%;
            height:100%;
+           margin-top:0;
            min-width: 600px;
            min-height: 400px;
            border:0;
@@ -295,7 +296,7 @@
                     <a href = "./index.html">图文模式</a>
                 </li>
                 <li>
-                    <a href = "#/base-load_cesium?show_type=1">列表模式</a>
+                    <a href = "#base-load_cesium?show_type=1">列表模式</a>
                 </li>
             </ul>
         </div>
@@ -316,13 +317,13 @@
                 </div>
                 <ul class="sub_container">
                     <li class="sub_menu">
-                        <a href="#/base-load_cesium" class ="route"><span>Hello Cesium</span></a>
+                        <a href="#base-load_cesium" class ="route"><span>Hello Cesium</span></a>
                     </li>
                     <li class="sub_menu">
-                        <a href="#/base-load_cesium2" class ="route"><span>去除所有控件</span></a>
+                        <a href="#base-load_cesium2" class ="route"><span>去除所有控件</span></a>
                     </li>
                     <li class="sub_menu">
-                        <a href="#/base-load_cesium3" class ="route"><span>动态显示隐藏控件</span></a>
+                        <a href="#base-load_cesium3" class ="route"><span>动态显示隐藏控件</span></a>
                     </li>
                 </ul>
             </li>
@@ -334,10 +335,10 @@
                 </div>
                 <ul class="sub_container">
                     <li class="sub_menu">
-                        <a href="#/model-show" class ="route"><span>模型属性修改</span></a>
+                        <a href="#model-show" class ="route"><span>模型属性修改</span></a>
                     </li>
                     <li class="sub_menu">
-                        <a href="#/model-show_underline" class ="route"><span>地下模型</span></a>
+                        <a href="#model-show_underline" class ="route"><span>地下模型</span></a>
                     </li>
                 </ul>
             </li>
@@ -349,10 +350,10 @@
                 </div>
                 <ul class="sub_container">
                     <li class="sub_menu">
-                        <a href="#/datasource-geojson" class ="route"><span>GeoJSON</span></a>
+                        <a href="#datasource-geojson" class ="route"><span>GeoJSON</span></a>
                     </li>
                     <li class="sub_menu">
-                        <a href="#/datasource-topojson" class ="route"><span>TopoJSON</span></a>
+                        <a href="#datasource-topojson" class ="route"><span>TopoJSON</span></a>
                     </li>
                 </ul>
             </li>
@@ -364,7 +365,7 @@
                 </div>
                 <ul class="sub_container">
                     <li class="sub_menu">
-                        <a href="#/fly-fly" class ="route"><span>飞行</span></a>
+                        <a href="#fly-fly" class ="route"><span>飞行</span></a>
                     </li>
                 </ul>
             </li>
@@ -378,22 +379,22 @@
                 <h3 class="title" name="base"><i class="fa fa-building"></i>&nbsp;&nbsp;基础</h3>
                 <div class ="content">
                     <div class="sub_title">Hello World</div>
-                    <div class="cart" name="base-load_cesium">
-                        <a href ="./index.html#/base-load_cesium?type=1" target="_blank">
+                    <div class="cart">
+                        <a href ="./index.html#base-load_cesium?type=1" name="base-load_cesium" target="_blank">
                             <span class="des">Hello Cesium</span>
                             <img class="img" src="./assets/thumb/hello_world.jpg" >
                         </a>
                     </div>
 
-                    <div class="cart" name="base-load_cesium2">
-                        <a href ="./index.html#/base-load_cesium2?type=1" target="_blank">
+                    <div class="cart">
+                        <a href ="./index.html#base-load_cesium2?type=1" name="base-load_cesium2" target="_blank">
                             <span class="des">去除所有控件</span>
                             <img class="img" src="./assets/thumb/no_controller.png" >
                         </a>
                     </div>
 
-                    <div class="cart" name="base-load_cesium3">
-                        <a href ="./index.html#/base-load_cesium3?type=1" target="_blank">
+                    <div class="cart">
+                        <a href ="./index.html#base-load_cesium3?type=1" name="base-load_cesium3" target="_blank">
                             <span class="des">动态显示隐藏控件</span>
                             <img class="img" src="./assets/thumb/dynamic_controller.png" >
                         </a>
@@ -404,15 +405,15 @@
                 <h3 class="title" name="model"><i class="fa fa-plane"></i>&nbsp;&nbsp;模型</h3>
                 <div class ="content">
                     <div class="sub_title">模型基础操作</div>
-                    <div class="cart" name="model-show">
-                        <a href ="./index.html#/model-show?type=1" target="_blank">
+                    <div class="cart">
+                        <a href ="./index.html#model-show?type=1" name="model-show" target="_blank">
                             <span class="des">模型属性修改</span>
                             <img class="img" src="./assets/thumb/model_show.png" >
                         </a>
                     </div>
 
-                    <div class="cart" name="model-show_underline">
-                        <a href ="./index.html#/model-show_underline?type=1" target="_blank">
+                    <div class="cart">
+                        <a href ="./index.html#model-show_underline?type=1" name="model-show_underline" target="_blank">
                             <span class="des">地下模型</span>
                             <img class="img" src="./assets/thumb/model_show_underline.png" >
                         </a>
@@ -423,15 +424,15 @@
                 <h3 class="title" name="datasource"><i class="fa fa-database"></i>&nbsp;&nbsp;数据源</h3>
                 <div class ="content">
                     <div class="sub_title">JSON数据源</div>
-                    <div class="cart" name="datasource-geojson">
-                        <a href ="./index.html#/datasource-geojson?type=1" target="_blank">
+                    <div class="cart">
+                        <a href ="./index.html#datasource-geojson?type=1" name="datasource-geojson" target="_blank">
                             <span class="des">Geo JSON</span>
                             <img class="img" src="./assets/thumb/datasource_geojson.png" >
                         </a>
                     </div>
 
-                    <div class="cart" name="datasource-topojson">
-                        <a href ="./index.html#/datasource-topojson?type=1" target="_blank">
+                    <div class="cart">
+                        <a href ="./index.html#datasource-topojson?type=1" name="datasource-topojson" target="_blank">
                             <span class="des">Topo JSON</span>
                             <img class="img" src="./assets/thumb/datasource_topojson.png" >
                         </a>
@@ -442,8 +443,8 @@
                 <h3 class="title" name="fly"><i class="fa fa-paper-plane"></i>&nbsp;&nbsp;路线</h3>
                 <div class ="content">
                     <div class="sub_title">飞行</div>
-                    <div class="cart" name="fly-fly">
-                        <a href ="./index.html#/fly-fly?type=1" target="_blank">
+                    <div class="cart" >
+                        <a href ="./index.html#fly-fly?type=1" target="_blank" name="fly-fly">
                             <span class="des">飞行</span>
                             <img class="img" src="./assets/thumb/fly_fly.png" >
                         </a>
@@ -495,6 +496,9 @@
         {
             setIframeSrc("index_list");
         }
+
+        //设置标题
+        dynamicChangeTitle(window.location.hash);
     }
     /**
         * 获取url参数
@@ -609,7 +613,7 @@
         init();
         if(type)
         {
-            setIframeSrc(event.newURL.split("#/")[1]);
+            setIframeSrc(event.newURL.split("#")[1]);
         }
     }
 
@@ -618,7 +622,7 @@
      */ 
     function setIframeSrc(url)
     {
-        url =  url.replace("#/","");
+        url =  url.replace("#","");
         url = url.split("?")[0];
         if(url.split("-").length>1)
             url = "./"+url.split('-')[0]+"/"+url.split('-')[1]+".html";
@@ -663,6 +667,25 @@
         {
             menus[i].style.backgroundColor = "";
             menus[i].style.borderTop = "";
+        }
+    }
+
+    /**
+     * 动态修改标题
+     */
+    function dynamicChangeTitle(url)
+    {
+        if(url.indexOf("?")>0)
+            url = url.split("?")[0];
+        if(!url.startsWith("#"))
+            url = "#"+url;
+        var routes = document.getElementsByClassName("route");
+        for(var i = 0;i<routes.length;i++)
+        {
+            if(routes[i].hash.split("?")[0]==url)
+            {
+                document.title= routes[i].innerText;
+            }
         }
     }
 </script>
